--- a/workshop2.qmd
+++ b/workshop2.qmd
@@ -13,34 +13,14 @@ format:
         toc-depth: 2
         
 editor: source
+
 ---
 
-**Colour scheme**
-
-In these workshops, we highlight some elements in boxes like this:
-
-::: callout-important
-## Important concepts
-
-Particularly important ideas or skills.
-:::
-
-::: callout-warning
-## Be careful
-
-Where to be careful.
-:::
-
-::: callout-tip
-## Things to think about
-
-What does this result show about the biology?
-:::
-
 ::: callout-note
-## Information
+## Welcome
+Welcome to the second R workshop for **BIO00066I** Becoming a Bioscientist: Research in Action.
 
-[Mesenchymal stem cells](https://en.wikipedia.org/wiki/Mesenchymal_stem_cell) are multipotent, but not pluripotent.
+In this workshop, we will analyse  data created with a Livecyte microscope, which performs live cell imaging, tracking individual cells, and measurings cell shape and size parameters for thousands of cells as they grow and divide. Here, the data is from [mesenchymal stromal cells](https://en.wikipedia.org/wiki/Mesenchymal_stem_cell). You will see the same cell lines in the BIO00066I laboratory work.
 :::
 
 # Learning objectives
@@ -58,6 +38,9 @@ In this workshop, you will learn ***technical skills*** and ***data science conc
 -   How to interpret data with care
 -   How to integrate knowledge from laboratory work and computational analysis
 
+The Module learning outcomes [can be seen here](https://www.york.ac.uk/students/studying/manage/programmes/module-catalogue/module/BIO00066I/latest).
+
+
 # Introduction
 
 ::: callout-important
@@ -73,26 +56,30 @@ Workshops are not a test. It's OK to make mistakes. It's OK to need help. You sh
 
 ## The biology
 
-Today we will look at some data from mesenchymal stem cells (MSCs, sometimes called stromal cells). MCSs are are *multipotent* stem cells, than can differentiate into many kinds of mesenchymal cells: bone, cartilage and fat cells. They are not *pluripotent*, in that they do have limits about how they differentiate.
+Today we will look at some data from mesenchymal stromal  cells (MSCs, sometimes called *stem* cells). MCSs are are *multipotent* cells, than can differentiate into many kinds of mesenchymal cells, including bone, cartilage and fat cells. They are not *pluripotent*, in that they do have limits about how they differentiate.
 
 MSCs are also:
 
 -   immuno-modulatory (they make cytokines)
 -   heterogeneous (they have subpopulations that are different from each other)
 
-**The MSCs we are looking at** are from bone marrow femoral head tissues (from the hip bone). These MSCs were *immortalised* (by XXX), and then cloned by limiting dilution. We will compare the data on cell shape and size from just **two clones**, both obtained from one person's femoral head tissues. Each *clone* was derived from a *single cell* from the person.
-
-We call these two clones *clone A* and *clone B*. Today, we will use our data analysis skills to explore how these cells differ.
+**The MSCs we are looking at** are from bone marrow femoral head tissues (from the hip bone). These MSCs were *immortalised* (by transforming them with a telomerase gene), and then cloned by limiting dilution. We will compare the data on cell shape and size from just **two clones**, both obtained from one person's femoral head tissues. Each *clone* was derived from a *single cell* from the person. We call these two clones *clone A* and *clone B*. Today, we will use our data analysis skills to explore how these cell line differ. Remember, these two cell lines were both obtained from one person. You probably have these kinds of MSCs too.
 
 ## Research questions
 
-1.  What parameters do we have in the data obtained from the XXX machine/method?
+1.  What parameters do we have in the data obtained from the Livecyte machine/method?
 2.  Which parameters differ between the clones?
 3.  Which parameters are correlated?
 
 ## The data
 
-The data we have today are derived from an XXX machine. We grew each clones in XXX media, and captured cell shape an size information for many cells from each clones with XXX machine. For each clone, we measured three *biological replicates*.
+The data we have today are derived from live cell imagining of mesenchymal stromal cells with a Livecyte microscope and the software it has. Each clones was cultured and the microscope captured cell shape an size information for thousands of cells from each clone (clone A and clone B). For each clone, we measured three *biological replicates*. 
+
+The Livecyte tracked each cell every 23 minutes, giving each data point a **tracking ID** (which tracks a unique cell 'object') and a **lineage ID**, which recalls the lineage of cells as they divide. For example, if cell 1, divied into cell 1A and cell 1B, they are all recorded by the Livecyte as being part of lineage ID 1.
+
+This video shows what Livecyte can do (perhaps turn the sound down, or whatch later).
+
+{{< video https://youtu.be/lposS9SNngY?si=XQXYAslkA3vK3Pzh  >}}
 
 ::: callout-note
 ## Biological replicates and technical replicates
@@ -117,6 +104,15 @@ Data science can be challenging when you first start. But data science does have
 :::
 
 # Exercises
+
+::: callout-important
+## Develop your R script, carefully.
+As we run though the exercises, copy the code to your script. You can cop the code by clicking on the 'clipboard' symbol at the top tight of the grey code chunks.  
+
+**#Comments**
+In R scripts, lines that start with the hash symbol (`#`) are comments. Add comments so you can remember what this code does. Commenting code makes it readable, for you and anyone else. Good data science includes clearly commented code.
+:::
+
 
 ## Getting started
 
@@ -159,13 +155,6 @@ library(ggpubr)
 7.  Make sure all these lines of code are in your script, with comments.
 8.  Save the script.
 
-::: callout-important
-## Comment your code!
-
-In R scripts, lines that start with the hash symbol (`#`) are comments.
-
-Commenting code makes it readable, for you and anyone else. Good data science includes clearly commented code.
-:::
 
 ## Loading the data
 
@@ -188,18 +177,13 @@ cells <-read_tsv(url("https://djeffares.github.io/BIO66I/all-cell-data-FFT.filte
 ::: callout-note
 ## About read_tsv
 
-We use the `read_tsv` function to read the tab-separated value file. Clicking on the link in the `read_tsv` takes you to a website about this function. **All the code chunks in these workshops have links like this.**
-
-The `clone = col_factor(),replicate = col_factor()` part let's R know that we want the *clone* column and the *replicate* column to be factors, rather than numeric values. Factors are used to represent categorical data.
+We use the `read_tsv` function to read the tab-separated value file. Clicking on the link in the `read_tsv` takes you to a website about this function. **All the code chunks in these workshops have links like this.** The `clone = col_factor(),replicate = col_factor()` *etc* let's R know that we want these columns to be factors, rather than numeric values. Factors are used to represent categorical data.
 :::
 
 ## Exploring the data
 
-It is important to know what data you have. How many rows and columns *etc*.
+It is important to know what data you have. How many rows and columns *etc*. There are many ways to do this in R. Here are some of our favourites. Copy and past these into your R script, and try them out.
 
-There are many ways to do this in R. Here are some of our favourites. Copy and past these into your R script, and try them out.
-
-##Amanda: should we remove some of the less-useful columns? #This will keep it simple for the students #Are the different measurements of cell size & shape *independent* measures?
 
 ```{r}
 #| echo: true
@@ -257,7 +241,7 @@ load("BIO00066I-workshop2.Rda")
 
 The `view(cells)` command shows that we have many cell shape metrics. We saw a summary of our cell shape metrics with the `summary(cells)` command above.
 
-Now we will do something even better, by using a tool from the `dplyr` package (part of the `tidyverse`) to make some sense of all this data very quickly.
+We can do even better, with tools from the `dplyr` package (part of the `tidyverse`). These allow us to make summaries of this data quickly. These methods will work for **any** data frames of any kind of data.
 
 ::: callout-note
 ## dplyr is wonderful
@@ -358,7 +342,7 @@ ggplot(cells, aes(x = width)) +
 
 The nonparametric equivalent of a t-Test is a **Wilcoxon rank sum test**. There are two ways to run this test in R. We can do `wilcox.test(vectorA, vectorB)`, where vectorA and vectorB contain the numeric values we want to test.
 
-But does does not suit `tidyverse` data frames very well. So we will use the `wilcox.test(numberic_value ~ categorry_name, data = some_data_frame)` method, like so:
+But does does not suit `tidyverse` data frames very well. So we will use the `wilcox.test(numeric_values ~ category_name, data = some_data_frame)` method, like so:
 
 ```{r}
 #Wilcoxon rank sum test
@@ -390,9 +374,7 @@ ggplot(cells,aes(x=clone,y=width))+
 ## If there is something you don't uderstand, it's OK to ask us!
 :::
 
-To increase your understanding, run through all the plots in section 3.5 with some other cell shape or size metric.
-
-To start, find what metrics are present with:
+To increase your understanding, run through all the plots in section 3.5 with some other cell shape or size metric. To start, find what metrics are present with:
 
 ```{r}
 #| echo: true
@@ -415,10 +397,11 @@ We suggest using one of these, in place of `width`:
 
 # Analysis with small data
 
-So far, we have used **all** the rows in our data frame. But perhaps, this isn't wise, because the Livecyte tracking followed each cell over time. So each measurement of cell shape is not a *completely* an independent measurement.It is more of a technical replicate than a biological replicate. It is valuable to learn how to make plots and analyse small data sets, as well as large ones. So not we will create a very small subset of the data, and investigate this.
+So far, we have used **all** the rows in our data frame. But perhaps this isn't wise, because the Livecyte tracking followed each cell over time. So each measurement of cell shape is not a *completely independent* measurement. It is more of a technical replicate than a biological replicate. 
 
-First, read in the small data set we prepared, and have a quick peel, to check what we have.
+It is also valuable to learn how to make plots and analyse small data sets, as well as large ones. So not we will create a very small subset of the data, and investigate this.
 
+First, read in the small data set we prepared, and have a quick look, to check what we have.
 
 ```{r}
 #| echo: true
@@ -436,12 +419,27 @@ small.tracking.data <-read_tsv(url("https://djeffares.github.io/BIO66I/trackingi
     )
 )
 
-#check that we have
+#check what we have
 glimpse(small.tracking.data)
 summary(small.tracking.data)
 ```
 
+## Plotting a small data set
 
+Previously we used `geom_boxplot()` to compare clone A and clone B. Lets comp
+
+
+```{r}
+names(small.tracking.data)
+ggplot(small.tracking.data, aes(x=clone, y=width))+
+    geom_boxplot()
+
+```
+
+
+
+
+## Statistical tests with small data and large sets
 
 
 # Reflection
@@ -495,6 +493,7 @@ ggplot(cells,aes(x=clone,y=length,fill=replicate))+
 Because our brains can only concentrate for a short time.
 :::
 
+
 ### Making the small data set
 
 This is how we made the small data set `trackingid.small.data`. Reading through and/or trying out this code will enhance your skills.
@@ -512,11 +511,14 @@ trackingid.summary.table<-cells |>
         area=median(area),
         sphericity=median(sphericity),
         length=median(length),
+        width=median(width),
         dry.mass=median(dry.mass),
         perimeter=median(perimeter),
         length.to.width=median(length.to.width)
     )
 ```
+
+names(cells)
 
 Then we use the `dplyr` function `sample_n`, which samples a number of rows from a data frame at random. If the data frame is grouped (which our data is), the number we set applies to each group:
 
@@ -533,6 +535,9 @@ trackingid.small.data <- sample_n(trackingid.summary.table, 5)
 nrow(trackingid.small.data)
 glimpse(trackingid.small.data)
 ```
+
+
+
 
 
 We write the output to a file:
@@ -559,7 +564,6 @@ view(trackingid.small.data)
 
 ## Planning for your report
 
-
-
 # The end.
+
 
